--- a/static/index.html
+++ b/static/index.html
@@ -225,7 +225,7 @@
                 </div>
                 
                 <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
-                    Email Classifier AI
+                    ClearBox
                 </h1>
                 
                 <p class="text-xl text-gray-600 dark:text-gray-300 max-w-2xl mx-auto leading-relaxed">
